changes: * add multiple domain support * update error message for form elements * update translations for status page form
