# apps/server/src/modules/status_page/status_page.dto.go
@@ -22,7 +22,7 @@ type CreateStatusPageDTO struct {
 	ShowCertificateExpiry bool     `json:"show_certificate_expiry"`
 	AutoRefreshInterval   int      `json:"auto_refresh_interval"`
 	MonitorIDs            []string `json:"monitor_ids,omitempty"`
-	Domain                string   `json:"domain,omitempty"`
+	Domains               []string `json:"domains,omitempty"`
 }
 
 type UpdateStatusPageDTO struct {
@@ -42,7 +42,7 @@ type UpdateStatusPageDTO struct {
 	ShowCertificateExpiry *bool     `json:"show_certificate_expiry,omitempty"`
 	AutoRefreshInterval   *int      `json:"auto_refresh_interval,omitempty"`
 	MonitorIDs            *[]string `json:"monitor_ids,omitempty"`
-	Domain                *string   `json:"domain,omitempty"`
+	Domains               *[]string `json:"domains,omitempty"`
 }
 
 type StatusPageWithMonitorsResponseDTO struct {
@@ -65,7 +65,7 @@ type StatusPageWithMonitorsResponseDTO struct {
 	ShowCertificateExpiry bool      `json:"show_certificate_expiry"`
 	AutoRefreshInterval   int       `json:"auto_refresh_interval"`
 	MonitorIDs            []string  `json:"monitor_ids"`
-	Domain                string    `json:"domain"`
+	Domains               []string  `json:"domains"`
 }
 
 type PublicMonitorDTO struct {
