# apps/server/src/modules/status_page/status_page.mongo.repository.go
@@ -25,7 +25,7 @@ type mongoModel struct {
 	FooterText           string             `bson:"footer_text"`
 	GoogleAnalyticsTagID string             `bson:"google_analytics_tag_id"`
 	AutoRefreshInterval  int                `bson:"auto_refresh_interval"`
-	Domain               string             `bson:"domain,omitempty"`
+	Domains              []string           `bson:"domains,omitempty"`
 
 	CreatedAt time.Time `bson:"created_at"`
 	UpdatedAt time.Time `bson:"updated_at"`
@@ -42,7 +42,7 @@ func toDomainModel(m *mongoModel) *Model {
 		Published:           m.Published,
 		FooterText:          m.FooterText,
 		AutoRefreshInterval: m.AutoRefreshInterval,
-		Domain:              m.Domain,
+		Domains:             m.Domains,
 
 		CreatedAt: m.CreatedAt,
 		UpdatedAt: m.UpdatedAt,
@@ -90,7 +90,7 @@ func (r *MongoRepository) Create(ctx context.Context, statusPage *Model) (*Model
 		UpdatedAt:           time.Now().UTC(),
 		FooterText:          statusPage.FooterText,
 		AutoRefreshInterval: statusPage.AutoRefreshInterval,
-		Domain:              statusPage.Domain,
+		Domains:             statusPage.Domains,
 	}
 
 	_, err := r.collection.InsertOne(ctx, mm)
@@ -132,7 +132,7 @@ func (r *MongoRepository) FindBySlug(ctx context.Context, slug string) (*Model, 
 
 func (r *MongoRepository) FindByDomain(ctx context.Context, domain string) (*Model, error) {
 	var mm mongoModel
-	err := r.collection.FindOne(ctx, bson.M{"domain": domain}).Decode(&mm)
+	err := r.collection.FindOne(ctx, bson.M{"domains": bson.M{"$in": []string{domain}}}).Decode(&mm)
 	if err != nil {
 		if errors.Is(err, mongo.ErrNoDocuments) {
 			return nil, nil // Not found
@@ -208,8 +208,8 @@ func (r *MongoRepository) Update(ctx context.Context, id string, statusPage *Upd
 	if statusPage.AutoRefreshInterval != nil {
 		updatePayload["auto_refresh_interval"] = *statusPage.AutoRefreshInterval
 	}
-	if statusPage.Domain != nil {
-		updatePayload["domain"] = *statusPage.Domain
+	if statusPage.Domains != nil {
+		updatePayload["domains"] = *statusPage.Domains
 	}
 
 	if len(updatePayload) == 0 {
