# apps/server/src/modules/status_page/status_page.sql.repository.go
@@ -22,7 +22,7 @@ type sqlModel struct {
 	UpdatedAt           time.Time `bun:"updated_at,nullzero,notnull,default:current_timestamp"`
 	FooterText          string    `bun:"footer_text"`
 	AutoRefreshInterval int       `bun:"auto_refresh_interval,notnull,default:30"`
-	Domain              string    `bun:"domain"`
+	Domains             []string  `bun:"domains,array"`
 }
 
 func toDomainModelFromSQL(sm *sqlModel) *Model {
@@ -38,7 +38,7 @@ func toDomainModelFromSQL(sm *sqlModel) *Model {
 		UpdatedAt:           sm.UpdatedAt,
 		FooterText:          sm.FooterText,
 		AutoRefreshInterval: sm.AutoRefreshInterval,
-		Domain:              sm.Domain,
+		Domains:             sm.Domains,
 	}
 }
 
@@ -55,7 +55,7 @@ func toSQLModel(m *Model) *sqlModel {
 		UpdatedAt:           m.UpdatedAt,
 		FooterText:          m.FooterText,
 		AutoRefreshInterval: m.AutoRefreshInterval,
-		Domain:              m.Domain,
+		Domains:             m.Domains,
 	}
 }
 
@@ -107,7 +107,7 @@ func (r *SQLRepositoryImpl) FindBySlug(ctx context.Context, slug string) (*Model
 
 func (r *SQLRepositoryImpl) FindByDomain(ctx context.Context, domain string) (*Model, error) {
 	sm := new(sqlModel)
-	err := r.db.NewSelect().Model(sm).Where("domain = ?", domain).Scan(ctx)
+	err := r.db.NewSelect().Model(sm).Where("? = ANY(domains)", domain).Scan(ctx)
 	if err != nil {
 		if err.Error() == "sql: no rows in result set" {
 			return nil, nil
@@ -183,8 +183,8 @@ func (r *SQLRepositoryImpl) Update(ctx context.Context, id string, statusPage *U
 		query = query.Set("auto_refresh_interval = ?", *statusPage.AutoRefreshInterval)
 		hasUpdates = true
 	}
-	if statusPage.Domain != nil {
-		query = query.Set("domain = ?", *statusPage.Domain)
+	if statusPage.Domains != nil {
+		query = query.Set("domains = ?", *statusPage.Domains)
 		hasUpdates = true
 	}
 
